--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -246,4 +246,27 @@ body {
       color: $secondary-font-color;
     }
   }
+
+  div#Mobile {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 60vh;
+    text-align: center;
+
+    img {
+      width: 60%;
+      height: auto;
+    }
+
+    h3 {
+      font-size: 4.5vw;
+      margin-top: 0;
+      margin-bottom: 0;
+      font-family: $primary-font-stack;
+      color: $secondary-font-color;
+    }
+  }
 }
