--- a/src/styles/Fresh.scss
+++ b/src/styles/Fresh.scss
@@ -1,6 +1,24 @@
 @import './App.scss';
 
-#Fresh {
+#Loading-2 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #ffd892;
+    background-image: url('../backgrounds/loading-2.png');
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    transition: 0.5s;
+    width: 100vw;
+    height: 100vh;
+    z-index: 3;
+}
+
+#Fresh-loaded {
     display: flex;
     flex-direction: column;
     align-items: left;
