--- a/src/styles/Fresh.scss
+++ b/src/styles/Fresh.scss
@@ -12,7 +12,7 @@
     background-image: url('../backgrounds/loading-2.png');
     background-repeat: no-repeat;
     background-size: 100% 100%;
-    transition: 0.5s;
+    transition: 1s;
     width: 100vw;
     height: 100vh;
     z-index: 3;
@@ -93,16 +93,18 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        align-items: center;
         margin-top: 5vh;
         width: 70vw;
     
         @media screen and (max-width: $small) {
+            flex-direction: column;
             width: 80vw;
         }
 
         img {
-            width: 40%;
-            height: auto;
+            width: 50%;
+            height: 100%;
 
             @media screen and (max-width: $small) {
                 margin-right: 2vw;
@@ -115,7 +117,7 @@
             width: 50%;
 
             @media screen and (max-width: $small) {
-                width: 60%;
+                width: 100%;
             }
 
             p.about-main {
@@ -309,7 +311,6 @@
 
             @media screen and (max-width: $small) {
                 margin-top: 0vh;
-                min-height: 18vh;
             }
 
             figure {
@@ -328,7 +329,6 @@
 
                 img {
                     width: 90%;
-                    height: auto;
                     box-shadow: 2px 2px 6px #8888887a;
                 }
             }
@@ -344,7 +344,7 @@
 
                     img {
                         width: 49.5%;
-                        height: auto;
+                        height: 20%;
                         box-shadow: 2px 2px 6px #88888863;
                         margin-right: 1.25vw;
                     }
