--- a/src/styles/Splash.scss
+++ b/src/styles/Splash.scss
@@ -12,7 +12,7 @@
     background-image: url('../backgrounds/loading-3.png');
     background-repeat: no-repeat;
     background-size: 100% 100%;
-    transition: 0.5s;
+    transition: 1s;
     width: 100vw;
     height: 100vh;
     z-index: 3;
@@ -31,6 +31,13 @@
     margin-left: 3vw;
     width: 70vw;
     max-height: 495vh;
+
+    @media screen and (max-width: $small) {
+        margin-left: 0;
+        align-items: center;
+        width: 80vw;
+        overflow-x: hidden;
+    }
 
     h1 {
         font-size: 2.5vw;
@@ -63,7 +70,8 @@
         color: $primary-font-color;
 
         @media screen and (max-width: $small) {
-            font-size: 6vw;
+            margin-top: 0.25vh;
+            font-size: 4vw;
         }
     }
 
@@ -72,6 +80,10 @@
         font-size: 0.9vw;
         margin-top: 0.5vh;
         line-height: 1.5;
+
+        @media screen and (max-width: $small) {
+            font-size: 1.75vw;
+        }
     }
 
     div.slick-slider {
@@ -80,6 +92,10 @@
         margin-top: 3vh;
         margin-bottom: 3vh;
         box-shadow: 2px 2px 10px #888888;
+
+        @media screen and (max-width: $small) {
+            width: 90%;
+        }
 
         div.slick-list {
             margin-bottom: -0.25vh;
@@ -91,18 +107,33 @@
         flex-direction: row;
         justify-content: space-between;
         width: 70vw;
-        height: 21vh;
+        min-height: 21vh;
         margin-top: 1vh;
+
+        @media screen and (max-width: $small) {
+            flex-direction: column;
+            width: 80vw;
+        }
 
         div.about-container {
             display: flex;
             flex-direction: column;
             width: 57.5%;
+            height: 100%;
+
+            @media screen and (max-width: $small) {
+                width: 100%;
+            }
 
             p.about-main {
                 margin-top: 1vh;
                 font-size: 1.25vw;
                 line-height: 1.25;
+
+                @media screen and (max-width: $small) {
+                    font-size: 2.25vw;
+                    line-height: 1.75;
+                }
             }
         }
 
@@ -111,23 +142,43 @@
             flex-direction: column;
             width: 30%;
             height: 100%;
+
+            @media screen and (max-width: $small) {
+                margin-top: 1.5vh;
+                width: 100%;
+                height: auto;
+            }
             
             div.logo-container {
                 display: flex;
                 flex-direction: row;
-                justify-content: flex-start;
+                justify-content: space-between;
                 margin-top: 1.75vh;
+                width: 65%;
                 height: 28%;
 
+                @media screen and (max-width: $small) {
+                    width: 80%;
+                    height: 15%;
+                }
+
                 img {
-                    margin-right: 1vw;
-                    height: 100%;
+                    height: 7.5vh;
                     width: auto;
+
+                    @media screen and (max-width: $small) {
+                        height: 5vh;
+                        width: auto;
+                    }
                 }
             }
 
             p {
                 margin-top: 1.5vh;
+
+                @media screen and (max-width: $small) {
+                    margin-top: 1vh;
+                }
             }
         }
     }
@@ -135,6 +186,10 @@
     div.research-container {
         margin-top: 1.25vh;
         margin-bottom: 1vh;
+
+        @media screen and (max-width: $small) {
+            width: 80vw;
+        }
 
         hr {
             width: 100%;
@@ -154,6 +209,12 @@
     }
 
     div.design-container {
+        width: 70vw;
+
+        @media screen and (max-width: $small) {
+            width: 80vw;
+        }
+
         p.design-description {
             margin-top: 1.5vh;
         }
@@ -162,13 +223,46 @@
             display: flex;
             flex-direction: row;
             justify-content: space-between;
+
+            @media screen and (max-width: $small) {
+                flex-direction: column;
+            }
     
             div.challenge-container, div.solution-container {
                 width: 45%;
+
+                @media screen and (max-width: $small) {
+                    width: 100%;
+                }    
     
                 ul {
                     margin-top: 1vh;
-                    padding-left: 1vw;
+                    padding-left: 0;
+                    list-style: none;
+
+                    @media screen and (max-width: $small) {
+                        margin-top: 0.5vh;
+                        margin-bottom: 1vh;
+                    }
+                }
+
+                li {
+                    color: $primary-font-color;
+                    font-size: 0.9vw;
+                    margin-bottom: 0.5vh;
+
+                    @media screen and (max-width: $small) {
+                        font-size: 1.75vw;
+                    }
+
+                    &:before {
+                        content: "•"; 
+                        font-size: 1.25vw;
+
+                        @media screen and (max-width: $small) {
+                            font-size: 1.75vw;
+                        }
+                    }
                 }
     
                 p {
@@ -183,13 +277,17 @@
             justify-content: center;
             align-items: center;
             margin-top: 1.5vh;
+
+            @media screen and (max-width: $small) {
+                width: 80vw;
+            }  
     
             figure {
                 width: 35%;
                 display: flex;
                 flex-direction: column;
-                margin-right: 0;
-    
+                margin: 0; 
+
                 img.high-link {
                     width: 100%;
                     height: auto;
@@ -209,6 +307,10 @@
             flex-flow: row wrap;
             align-items: flex-start;
             width: 75%;
+
+            @media screen and (max-width: $small) {
+                width: 80%;
+            } 
     
             img {
                 margin-right: 2vw;
@@ -221,11 +323,37 @@
     }
 
     div.links-container {
-        margin-top: 2vh;
-        margin-bottom: 5vh; 
+        margin-top: 2vh; 
+        margin-bottom: 7vh; 
 
+        @media screen and (max-width: $small) {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            height: auto;
+            width: 80vw;
+            margin-bottom: 9vh;
+        }
+
+        h3 {
+            align-self: flex-start;
+            margin-bottom: 1vh;
+
+            @media screen and (max-width: $small) {
+                margin-bottom: 0vh;
+            }
+        }
+        
         ul {
             padding-left: 1.25vw;
+            width: 75%;
+            list-style-position: inside;
+
+            @media screen and (max-width: $small) {
+                margin-top: 1.25vh;
+                width: 100%;
+                overflow: auto;
+            }
         }
 
         li {
@@ -234,6 +362,7 @@
             font-family: $primary-font-stack;
             line-height: 1.5;
             color: #99C355;
+            float: left;
 
             a, a:visited {
                 font-size: 1.75vh;
@@ -241,6 +370,11 @@
                 font-family: $secondary-font-stack;
                 color: $primary-font-color;
                 text-decoration: none;
+
+                @media screen and (max-width: $small) {
+                    display: block;
+                    font-size: 1.5vh;
+                }
             }
 
             a:hover {
@@ -261,6 +395,10 @@
         right: 1.5vw;
         width: 8%;
 
+        @media screen and (max-width: $small) {
+            width: 20%;
+        }
+
         a {
             display: flex;
             flex-direction: column;
@@ -272,11 +410,19 @@
             width: 100%;
             height: auto;
             margin-top: 1vh;
+
+            @media screen and (max-width: $small) {
+                margin-top: 0.5vh;
+            }
         }
 
         img#smile-logo {
             width: 50%;
             height: auto;
+        }
+
+        @media screen and (max-width: $small) {
+            bottom: 3vh;
         }
     }
 }
